--- a/app/views/admin/index.phtml
+++ b/app/views/admin/index.phtml
@@ -2,7 +2,7 @@
 if ($this->session->has('isAdmin')) {
     // Retrieve its value
     $name = $this->session->get('nama');
-    echo $name;
+    echo implode("",$name) . " ";
     echo $this->tag->linkTo([
         "/pengguna/logout",
         "Logout",
@@ -13,6 +13,14 @@ if ($this->session->has('isAdmin')) {
             echo $this->tag->linkTo([
                 "/admin/createInv",
                 "Tambah Inventaris",
+            ]);
+        ?>
+    </div>
+    <div>
+        <?php
+            echo $this->tag->linkTo([
+                "/admin/listInv",
+                "Daftar Inventaris",
             ]);
         ?>
     </div>
