--- a/app/views/admin/listInv.phtml
+++ b/app/views/admin/listInv.phtml
@@ -1,39 +1,47 @@
-<?php
-if ($invens->count() > 0) {
-    ?>
-    <h3>Daftar Inventaris</h3>
-    <table class="table table-bordered table-hover">
-        <thead class="thead-light">
-            <tr>
-                <th>Nomor</th>
-                <th>Nama</th>
-                <th>Status</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-        <?php foreach ($invens as $inven) { ?>
-            <tr>
-                <td><?php echo $inven->id_inv; ?></td>
-                <td><?php echo $inven->nama_inv; ?></td>
-                <td><?php echo $inven->status_inv; ?></td>
-                <td>
-                    <?php
-                        echo $this->tag->linkTo([
-                            "/inventaris/edit/".$inven->id_inv,
-                            "Edit",
-                        ]);
-                    ?>
-                    <?php
-                        echo $this->tag->linkTo([
-                            "/inventaris/delete/".$inven->id_inv,
-                            "Delete",
-                        ]);
-                    ?>
-                </td>
-            </tr>
-        <?php } ?>
-        </tbody>
-    </table>
+<h3>Daftar Inventaris</h3>
+<table class="table table-bordered table-hover">
+    <thead class="thead-light">
+        <tr>
+            <th>Nomor</th>
+            <th>Nama</th>
+            <th>Status</th>
+            <th>Action</th>
+        </tr>
+    </thead>
+    <tbody>
     <?php
-    }
+    if ($invens->count() > 0) {
+        foreach ($invens as $inven) { ?>
+        <tr>
+            <td><?php echo $inven->id_inv; ?></td>
+            <td><?php echo $inven->nama_inv; ?></td>
+            <td><?php echo $inven->status_inv; ?></td>
+            <td>
+                <?php
+                    echo $this->tag->linkTo([
+                        "/inventaris/edit/".$inven->id_inv,
+                        "Edit",
+                    ]);
+                ?>
+                <?php
+                    echo $this->tag->linkTo([
+                        "/inventaris/delete/".$inven->id_inv,
+                        "Delete",
+                    ]);
+                ?>
+            </td>
+        </tr>
+    <?php } 
+    }else{
+        echo "Tidak ada barang :(";
+    } ?>
+    </tbody>
+</table>
+<div>
+    <?php
+        echo $this->tag->linkTo([
+            "/admin",
+            "Kembali",
+        ]);
+    ?>
+</div>
