--- a/app/views/admin/index.phtml
+++ b/app/views/admin/index.phtml
@@ -24,7 +24,40 @@ if ($this->session->has('isAdmin')) {
             ]);
         ?>
     </div>
-    <!-- BUAT TABEL KONFIRMASI -->
+    <table class="table table-bordered table-hover">
+    <thead class="thead-light">
+        <tr>
+            <th>Nomor</th>
+            <th>Nama</th>
+            <th>Nama Barang</th>
+            <th>Status</th>
+            <th>Action</th>
+        </tr>
+    </thead>
+    <tbody>
+    <?php
+    if ($pinjInvs->count() > 0) {
+        foreach ($pinjInvs as $pinjInv) { ?>
+        <tr>
+            <td><?php echo $pinjInv->id; ?></td>
+            <td><?php echo $pinjInv->nama; ?></td>
+            <td><?php echo $pinjInv->nama_barang; ?></td>
+            <td><?php echo $pinjInv->status; ?></td>
+            <td>
+                <?php
+                    echo $this->tag->linkTo([
+                        "/admin/confirmInv/".$pinjInv->id,
+                        "Konfirmasi",
+                    ]);
+                ?>
+            </td>
+        </tr>
+    <?php } 
+    }else{
+        echo "Tidak ada barang :(";
+    } ?>
+    </tbody>
+</table>
 <?php
 }else{
     echo "Sorii, hanya admin yang boleh mengakses halaman ini :)";
