--- a/app/views/mahasiswa/index.phtml
+++ b/app/views/mahasiswa/index.phtml
@@ -1,8 +1,7 @@
 <?php
 if ($this->session->has('mhs')) {
-    // Retrieve its value
     $name = $this->session->get('nama');
-    $id = $this->session->get('id');
+    //$id = $this->session->get('id');
     echo implode("",$name) . " ";
     echo $this->tag->linkTo([
         "/pengguna/logout",
@@ -12,15 +11,11 @@ if ($this->session->has('mhs')) {
     <div>
         <?php
             echo $this->tag->linkTo([
-                "/mahasiswa/".implode("",$id)."/requestInv",
+                "/mahasiswa/".$id."/listInv",
                 "Pinjam Barang",
             ]);
         ?>
     </div>
-
-    <?php
-    if ($invens->count() > 0) {
-    ?>
     <h3>Daftar Barang Pinjaman</h3>
     <table class="table table-bordered table-hover">
         <thead class="thead-light">
@@ -30,22 +25,38 @@ if ($this->session->has('mhs')) {
                 <th>Tanggal Pinjam</th>
                 <th>Keperluan</th>
                 <th>Status</th>
+                <th>Action</th>
             </tr>
         </thead>
         <tbody>
-        <?php foreach ($invens as $inven) { ?>
-            <tr>
-                <td><?php echo $inven->id; ?></td>
-                <td><?php echo $inven->nama_barang; ?></td>
-                <td><?php echo $inven->tanggal; ?></td>
-                <td><?php echo $inven->keperluan; ?></td>
-                <td><?php echo $inven->status; ?></td>
-            </tr>
-        <?php } ?>
+            <?php
+            if ($pinjInvs->count() > 0) {
+                ?>
+            <?php foreach ($pinjInvs as $pinjInv) { ?>
+                <tr>
+                    <td><?php echo $pinjInv->id; ?></td>
+                    <td><?php echo $pinjInv->nama_barang; ?></td>
+                    <td><?php echo $pinjInv->tanggal; ?></td>
+                    <td><?php echo $pinjInv->keperluan; ?></td>
+                    <td><?php echo $pinjInv->status; ?></td>
+                    <td><?php
+                            echo $this->tag->linkTo([
+                                "/mahasiswa/cancelInv/". $id . "/" . $pinjInv->id,
+                                "Batal",
+                            ]);
+                        ?>
+                    </td>
+                </tr>
+                <?php } ?>
+            <?php }else{?>
+                        <tr>
+                            <td colspan="6"><p class="text-center">Bersiihh, tidak ada request barang~</p></td>
+                        </tr>
+                        <?php
+                    } ?>
         </tbody>
     </table>
     <?php
-    }
 }else{
     echo "Sorii, hanya " . $name . " yang bisa mengakses halaman ini :)";
     header( "refresh:2;url=/" );
