--- a/app/views/inventaris/edit.phtml
+++ b/app/views/inventaris/edit.phtml
@@ -1,10 +1,10 @@
 <?php
 if ($this->session->has('isAdmin')) {
-    $id = $this->session->get('isAdmin');
+    $id = implode("",$this->session->get('isAdmin'));
     ?>
     <h2>Edit Inventaris</h2>
 
-    <?php echo $this->tag->form("inventaris/update/".implode("",$id)."/".$invenId); ?>
+    <?php echo $this->tag->form("inventaris/update/".$id."/".$invenId); ?>
         
         <p>
             <label for="nama">Nama</label>
@@ -16,19 +16,21 @@ if ($this->session->has('isAdmin')) {
             <?php echo $this->tag->textField(['status', 'value' => $status_inv]); ?>
         </p>
 
-        <p>
-            <?php echo $this->tag->submitButton("Submit"); ?>
-        </p>
+        <div class="d-flex justify-content-between" style="padding-top : 200px">
+            <?php echo $this->tag->linkTo(
+                [
+                    "/admin/".$id,
+                    "Kembali",
+                    'class' => 'btn btn-primary',
+                ]); ?>
+            <?php echo $this->tag->submitButton(
+                [
+                    "Submit",
+                    'class' => 'btn btn-success',
+                ]); ?>
+        </div>
 
     </form>
-    <div>
-    <?php
-        echo $this->tag->linkTo([
-            "/admin/listInv",
-            "Kembali",
-        ]);
-    ?>
-    </div>  
 <?php
 }else{
     echo "Sorii, hanya admin yang boleh mengakses halaman ini :)";
