--- a/app/views/inventaris/request.phtml
+++ b/app/views/inventaris/request.phtml
@@ -1,38 +1,39 @@
 <?php
 if ($this->session->has('mhs')) {
     ?>
-    <h2>Edit Inventaris</h2>
+    <h3 style = "padding-bottom : 30px">Request Peminjaman Barang</h3>
 
     <?php echo $this->tag->form("inventaris/request/".$id."/".$invenId); ?>
         
         <p>
-            <label for="nama">Nama</label>
+            <label for="nama" style="width: 150px">Nama</label>
             <?php echo $this->tag->textField(['nama', 'value' => $nama]); ?>
         </p>
 
         <p>
-            <label for="status">Keperluan</label>
+            <label for="status" style="width: 150px">Keperluan</label>
             <?php echo $this->tag->textField('keperluan'); ?>
         </p>
 
         <p>
-            <label for="tanggal">Tanggal Pinjam</label>
+            <label for="tanggal" style="width: 150px">Tanggal Pinjam</label>
             <?php echo $this->tag->dateField('tanggal'); ?>
         </p>
+        <div class="d-flex justify-content-between" style="padding-top : 200px">
+            <?php echo $this->tag->linkTo(
+                [
+                    "/mahasiswa/".$id,
+                    "Kembali",
+                    'class' => 'btn btn-primary',
+                ]); ?>
+            <?php echo $this->tag->submitButton(
+                [
+                    "Submit",
+                    'class' => 'btn btn-success',
+                ]); ?>
+        </div>
 
-        <p>
-            <?php echo $this->tag->submitButton("Submit"); ?>
-        </p>
-
-    </form>
-    <div>
-    <?php
-        echo $this->tag->linkTo([
-            "/mahasiswa/".$id."/requestInv",
-            "Kembali",
-        ]);
-    ?>
-    </div>  
+    </form> 
 <?php
 }else{
     echo "Sorii, hanya admin yang boleh mengakses halaman ini :)";
