--- a/app/views/pengguna/loginpage.phtml
+++ b/app/views/pengguna/loginpage.phtml
@@ -1,21 +1,19 @@
-<div style="margin-top: 15%">
+<div style="margin-top: 10%">
     <div class="container" style="margin:auto; width:350px">
         <h4 class="text-center" style="padding-bottom: 20px">
             <img src="img/Lammas_Logo.png" style="width: 50px">
             Lammas
         </h4>
-        <!-- flashSession masih gabisa -->
-        <?php $this->flashSession->output() ?>
         <?php echo $this->tag->form("pengguna/login"); ?>
 
             <p>
                 <label for="nrp" style="width: 100px">NRP</label>
-                <?php echo $this->tag->textField("nrp"); ?>
+                <?php echo $this->tag->textField(["nrp", 'style' => 'width:300px']); ?>
             </p>
 
             <p>
                 <label for="password" style="width: 100px">Password</label>
-                <?php echo $this->tag->passwordField("password"); ?>
+                <?php echo $this->tag->passwordField(["password", 'style' => 'width:300px']); ?>
             </p>
 
             <p>
@@ -27,6 +25,11 @@
             </p>
 
         </form>
-        <p class="text-center">Don't have one? <?php echo $this->tag->linkTo("signup", "Sign Up Here!");?></p>
+        <p class="text-center">Don't have one? <?php echo $this->tag->linkTo(
+            [
+                "signup", 
+                "Sign Up Here!",
+                'style' => 'color:red' 
+            ]);?></p>
     </div>
 </div>
