--- a/app/views/signup/index.phtml
+++ b/app/views/signup/index.phtml
@@ -1,34 +1,43 @@
-<h2>Sign up using this form</h2>
+<div style="margin-top: 5%">
+    <div class="container" style="margin:auto; width:350px">
+    <h4 class="text-center" style="padding-bottom: 20px">Register</h4>
+        <?php echo $this->tag->form("signup/register"); ?>
+            <p>
+                <label for="nama" style="width: 100px">Nama</label>
+                <?php echo $this->tag->textField(["nama", 'style' => 'width:300px']); ?>
+            </p>
 
-<?php echo $this->tag->form("signup/register"); ?>
+            <p>
+                <label for="nrp" style="width: 100px">NRP</label>
+                <?php echo $this->tag->textField(["nrp", 'style' => 'width:300px']); ?>
+            </p>
+
+            <p>
+                <label for="no_telp" style="width: 200px">Nomor Telepon</label>
+                <?php echo $this->tag->textField(["no_telp", 'style' => 'width:300px']); ?>
+            </p>
+
+            <p>
+                <label for="alamat" style="width: 100px">Alamat</label>
+                <?php echo $this->tag->textField(["alamat", 'style' => 'width:300px']); ?>
+            </p>
+
+            <p>
+                <label for="password" style="width: 100px">Password</label>
+                <?php echo $this->tag->passwordField(["password", 'style' => 'width:300px']); ?>
+            </p>
+
+            <p>
+                <?php echo $this->tag->submitButton(
+                    [
+                        "Register",
+                        'class' => 'btn btn-primary btn-lg btn-block',
+                        'style' => 'width:300px'
+                    ]); ?>
+            </p>
+
+        </form>
+    </div>
+</div>
     
-    <p>
-        <label for="nama">Nama</label>
-        <?php echo $this->tag->textField("nama"); ?>
-    </p>
 
-    <p>
-        <label for="nrp">NRP</label>
-        <?php echo $this->tag->textField("nrp"); ?>
-    </p>
-
-    <p>
-        <label for="no_telp">Nomor Telepon</label>
-        <?php echo $this->tag->textField("no_telp"); ?>
-    </p>
-
-    <p>
-        <label for="alamat">Alamat</label>
-        <?php echo $this->tag->textField("alamat"); ?>
-    </p>
-
-    <p>
-        <label for="password">Password</label>
-        <?php echo $this->tag->passwordField("password"); ?>
-    </p>
-
-    <p>
-        <?php echo $this->tag->submitButton("Register"); ?>
-    </p>
-
-</form>
