--- a/app/views/inventaris/create.phtml
+++ b/app/views/inventaris/create.phtml
@@ -1,32 +1,34 @@
 <?php
 if ($this->session->has('isAdmin')) {
-    $id = $this->session->get('isAdmin')
+    $id = implode("",$this->session->get('isAdmin'))
     ?>
-    <h2>Menambah Inventaris</h2>
+    <h3 style = "padding-bottom : 30px">Menambah Inventaris</h3>
 
-    <?php echo $this->tag->form("inventaris/submit/".implode("",$id)); ?>
+    <?php echo $this->tag->form("inventaris/submit/".$id); ?>
         
         <p>
-            <label for="nama">Nama</label>
+            <label for="nama" style="width: 150px">Nama</label>
             <?php echo $this->tag->textField("nama"); ?>
         </p>
         <p>
-            <label for="status">Status</label>
+            <label for="status" style="width: 150px">Status</label>
             <?php echo $this->tag->textField("status"); ?>
         </p>
-        <p>
-            <?php echo $this->tag->submitButton("Submit"); ?>
-        </p>
+        <div class="d-flex justify-content-between" style="padding-top : 200px">
+            <?php echo $this->tag->linkTo(
+                [
+                    "/admin/".$id,
+                    "Kembali",
+                    'class' => 'btn btn-primary',
+                ]); ?>
+            <?php echo $this->tag->submitButton(
+                [
+                    "Submit",
+                    'class' => 'btn btn-success',
+                ]); ?>
+        </div>
 
     </form>
-    <div>
-    <?php
-        echo $this->tag->linkTo([
-            "/admin/".implode("",$id),
-            "Kembali",
-        ]);
-    ?>
-</div>
 <?php 
 }else{
     echo "Sorii, hanya admin yang boleh mengakses halaman ini :)";
