--- a/app/views/mahasiswa/index.phtml
+++ b/app/views/mahasiswa/index.phtml
@@ -2,21 +2,8 @@
 if ($this->session->has('mhs')) {
     $name = $this->session->get('nama');
     //$id = $this->session->get('id');
-    echo implode("",$name) . " ";
-    echo $this->tag->linkTo([
-        "/pengguna/logout",
-        "Logout",
-    ]);
     ?>
-    <div>
-        <?php
-            echo $this->tag->linkTo([
-                "/mahasiswa/".$id."/listInv",
-                "Pinjam Barang",
-            ]);
-        ?>
-    </div>
-    <h3>Daftar Barang Pinjaman</h3>
+    <h3>Barang Pinjaman</h3>
     <table class="table table-bordered table-hover">
         <thead class="thead-light">
             <tr>
@@ -34,7 +21,7 @@ if ($this->session->has('mhs')) {
                 ?>
             <?php foreach ($pinjInvs as $pinjInv) { ?>
                 <tr>
-                    <td><?php echo $pinjInv->id; ?></td>
+                    <td class="counterCell"></td>
                     <td><?php echo $pinjInv->nama_barang; ?></td>
                     <td><?php echo $pinjInv->tanggal; ?></td>
                     <td><?php echo $pinjInv->keperluan; ?></td>
@@ -43,6 +30,7 @@ if ($this->session->has('mhs')) {
                             echo $this->tag->linkTo([
                                 "/mahasiswa/cancelInv/". $id . "/" . $pinjInv->id,
                                 "Batal",
+                                'class' => 'btn btn-danger btn-block'
                             ]);
                         ?>
                     </td>
