--- a/app/views/inventaris/edit.phtml
+++ b/app/views/inventaris/edit.phtml
@@ -19,7 +19,7 @@ if ($this->session->has('isAdmin')) {
         <div class="d-flex justify-content-between" style="padding-top : 200px">
             <?php echo $this->tag->linkTo(
                 [
-                    "/admin/".$id,
+                    "/admin/".$id."/listInv",
                     "Kembali",
                     'class' => 'btn btn-primary',
                 ]); ?>
